--- a/app/globals.css
+++ b/app/globals.css
@@ -438,14 +438,14 @@ border color: rgba(161, 174, 229, .22) */
   height: 100%;
 }
 
-img {
+.fixedImages > img {
   width: 100%;
   height: auto;
 }
 
 .topheader {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: radial-gradient(ellipse at left, rgba(0, 255, 255, 0.2) 0%, transparent 50%) 0% -100% /
       100% 80%,
     radial-gradient(ellipse, rgba(255, 119, 0, 0.2) 0%, transparent 50%) 60% -50% / 100vmin 90vmin;
@@ -470,7 +470,6 @@ img {
   background-repeat: no-repeat;
   background-clip: text;
   color: transparent;
-
   animation: slidetext 3s alternate infinite;
 }
 
