--- a/app/globals.css
+++ b/app/globals.css
@@ -16,8 +16,7 @@ body {
       no-repeat,
     radial-gradient(ellipse at bottom, purple 0%, transparent 50%) 100% 0 / 80vmin 100vmin no-repeat,
     linear-gradient(#1e1e1e, #1e1e1e);
-  position: fixed;
-  background-attachment: fixed;
+  position: static;
   z-index: -1;
 }
 
@@ -100,7 +99,7 @@ border color: rgba(161, 174, 229, .22) */
 .hori_card {
   background-color: rgba(255, 255, 255, 0.025);
   backdrop-filter: url(#noise) blur(5px);
-  /* filter: url(#noise); */
+  filter: url(#noise);
 }
 
 /* section bg */
@@ -147,45 +146,9 @@ border color: rgba(161, 174, 229, .22) */
   -webkit-font-smoothing: subpixel-antialiased;
 }
 
-/* .imgcard {
-  position: relative;
-}
-
-.imgcard::before {
-  content: "";
-  position: absolute;
-  top: 20%;
-  left: 20%;
-  width: 80%;
-  height: 100%;
-  background: linear-gradient(hsl(0, 0%, 10%), hsl(0, 0%, 20%)) 100% 20% / 60vmin 0.5vmin no-repeat,
-    linear-gradient(hsl(0, 0%, 20%), hsl(0, 0%, 20%)) no-repeat;
-  border-radius: 20px;
-  z-index: -1;
-} */
-
 .cardeffect {
   position: relative;
 }
-
-/* .checkoutbtn {
-  background: linear-gradient(
-    rgba(255, 255, 255, 0.2) 0%,
-    transparent 50%,
-    rgba(255, 255, 255, 0.2) 100%
-  );
-  background-position: 0 0;
-
-  box-shadow: 0px 1px 1px 0 rgba(255, 255, 255, 0.5) inset;
-  transition: all 1s ease-in;
-  width: 50%;
-}
-
-.checkoutbtn:hover {
-  background-position: 50px 50px;
-  transition: all 1s linear ease-in;
-  width: 100%;
-} */
 
 .cardeffect::after {
   width: 100%;
@@ -203,10 +166,6 @@ border color: rgba(161, 174, 229, .22) */
     )
     50% 0% / 50vmin 0.5vmin no-repeat;
 }
-
-/* .cardeffect.active {
-  animation: roll 5s linear infinite;
-} */
 
 .settings.active {
   animation: shift 1s linear forwards, roll 5s linear infinite;
@@ -291,6 +250,7 @@ border color: rgba(161, 174, 229, .22) */
 
 .buttonBtn {
   --width: 100%;
+  height: 10vh;
   position: relative;
   width: calc(var(--width) + 1.5rem + 2rem);
   padding: 1rem 2rem;
@@ -307,12 +267,12 @@ border color: rgba(161, 174, 229, .22) */
   top: 0;
   left: 0;
   content: "";
-  width: 60px;
+  width: 70px;
   height: 100%;
   border-radius: 9999px;
   border: 1px solid white;
   transition: width 0.5s ease-in-out;
-  z-index: -999;
+
   animation: intro 0.5s linear alternate;
 }
 
@@ -327,7 +287,7 @@ border color: rgba(161, 174, 229, .22) */
   animation: intro 0.5s linear forwards;
 }
 
-.headerstyles.active .arrowRight {
+.arrowRight {
   animation: jiggle 0.5s linear forwards;
 }
 
@@ -486,6 +446,107 @@ border color: rgba(161, 174, 229, .22) */
   background-repeat: no-repeat;
   background-clip: text;
   color: transparent;
+}
+.cls-1 {
+  fill: none;
+  stroke: #a15398;
+  stroke-miterlimit: 10;
+}
+
+.bord {
+  position: relative;
+  width: 100%;
+}
+
+.bord::before {
+  width: 100%;
+  height: 60%;
+  content: "";
+  position: absolute;
+  left: -5px;
+  bottom: 1.5rem;
+  border-left-width: 10px;
+  border-color: white;
+}
+
+.bord::after {
+  width: 100%;
+  height: 60%;
+  content: "";
+  position: absolute;
+
+  right: -5px;
+  bottom: 1.5rem;
+  border-right-width: 10px;
+  border-color: white;
+}
+
+.listwrapper {
+}
+
+.list:hover {
+  background: rgba(31, 41, 55, 0.5);
+  border: none;
+  border-top: none;
+  border-bottom: none;
+}
+
+.list div:first-child .slide-up {
+  position: relative;
+  overflow: hidden;
+}
+
+.list div:first-child span:nth-child(1) {
+  transform: translateY(200%);
+  position: absolute;
+  transition: all 0.3s ease-in-out;
+  color: white;
+}
+
+.list:hover div:first-child span:nth-child(1) {
+  transform: translateY(0%);
+}
+
+.list div:first-child span:nth-child(2) {
+  transform: translateY(0%);
+  transition: all 0.3s ease-in-out;
+}
+
+.list:hover div:first-child span:nth-child(2) {
+  width: 40vw;
+  transform: translateY(-100%);
+  transition: all 0.3s ease-in-out;
+}
+
+.list .slide-image {
+}
+
+.list .slide-image div {
+  transform: translateY(200%);
+  transition: all 0.5s ease-out;
+}
+
+.list:hover .slide-image div {
+  transform: translateY(0%);
+  transition: all 0.5s ease-in-out;
+}
+.list .arrow {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  clip-path: inset(100% 0 0);
+  transition: all 0.7s ease-in-out;
+  transform-origin: bottom;
+  position: absolute;
+  height: 6.5cqw;
+  width: 6.5cqw;
+}
+
+.list:hover .arrow {
+  background-color: lightgreen;
+  justify-content: center;
+  clip-path: inset(0);
+  transition: all 0.7s ease-in-out;
 }
 
 @keyframes slidetext {
