--- a/app/globals.css
+++ b/app/globals.css
@@ -263,9 +263,6 @@ border color: rgba(161, 174, 229, .22) */
   animation: jiggle 0.5s linear forwards;
 }
 
-.iconbtn:hover {
-}
-
 .textbtn {
   position: relative;
   margin-left: 1.5rem;
@@ -578,7 +575,7 @@ border color: rgba(161, 174, 229, .22) */
 }
 
 .list div:first-child span:nth-child(1) {
-  transform: translateY(200%);
+  transform: translateY(100%);
   position: absolute;
   transition: transform 0.3s ease-in-out;
   color: white;
@@ -709,8 +706,8 @@ svg {
   position: absolute;
   top: 0;
   right: 0;
-  height: 12vmin;
-  width: 12vmin;
+  height: 4rem;
+  width: 4rem;
 }
 
 .imageoverlay:hover .arrow {
@@ -728,6 +725,32 @@ svg {
 .imageoverlay:hover .arrow .linkarrow {
   transform: translateZ(10%);
   transition: transform 0.5s ease-in-out;
+}
+
+.delay_display {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 1em;
+  background: red;
+  animation: grow-progress auto linear;
+  animation-timeline: scroll();
+  animation-range: 2% 100%;
+  opacity: 0;
+
+  z-index: 9999;
+}
+
+@keyframes grow-progress {
+  from {
+    transform: scaleX(0);
+    opacity: 1;
+  }
+  to {
+    transform: scaleX(1);
+    opacity: 1;
+  }
 }
 
 @keyframes slidetext {
