added touch action to kill the card behaving anyhow on mobile. Hope this works

--- a/app/globals.css
+++ b/app/globals.css
@@ -179,6 +179,7 @@ border color: rgba(161, 174, 229, .22) */
 
 .cardeffect:hover::before {
   opacity: 1;
+  touch-action: none;
 }
 
 .cardeffect::after {
@@ -190,6 +191,7 @@ border color: rgba(161, 174, 229, .22) */
   background: rgba(45, 45, 45, 0.75);
   z-index: -99;
   border-radius: 20px;
+  touch-action: none;
 }
 
 .settings.active {
