--- a/app/globals.css
+++ b/app/globals.css
@@ -162,14 +162,16 @@ border color: rgba(161, 174, 229, .22) */
   touch-action: none;
 }
 
-/* @media screen and (max-width: 800px) {
+@media screen and (max-width: 800px) {
   .cardeffect,
   .cardeffect::after,
   .cardeffect::before,
   .cardeffect:hover::before {
-    pointer-events: none;
+    transform: none;
+    perspective: none;
+    touch-action: auto;
   }
-} */
+}
 
 .cardeffect::before {
   position: absolute;
