--- a/app/globals.css
+++ b/app/globals.css
@@ -285,7 +285,7 @@ border color: rgba(161, 174, 229, .22) */
 
 .buttonBtn {
   --width: 100%;
-  height: 70px;
+  height: 60px;
   position: relative;
   width: calc(var(--width) + 1.5rem + 2rem);
   padding: 1rem 2rem;
@@ -302,7 +302,7 @@ border color: rgba(161, 174, 229, .22) */
   top: 0;
   left: 0;
   content: "";
-  width: 70px;
+  width: 60px;
   height: 100%;
   border-radius: 9999px;
   border: 1px solid white;
@@ -325,7 +325,7 @@ border color: rgba(161, 174, 229, .22) */
 
 .tertiaryBtn {
   --width: 100%;
-  height: 70px;
+  height: 60px;
   position: relative;
   width: calc(var(--width) + 1.5rem + 2rem);
   padding: 1rem 2rem;
@@ -344,7 +344,7 @@ border color: rgba(161, 174, 229, .22) */
   content: "";
   /* background-color: rgba(0, 0, 0, 0.5); */
   backdrop-filter: blur(20px);
-  width: 70px;
+  width: 60px;
   height: 100%;
   border-radius: 9999px;
   border: 1px solid black;
@@ -756,6 +756,105 @@ svg {
   transition: animation-range 1s linear;
 
   z-index: 9;
+}
+
+.imageghost {
+  position: relative;
+}
+
+.imageghost_two {
+  position: relative;
+  top: -2rem;
+}
+
+.imageghost::before {
+  position: absolute;
+  left: 0.5rem;
+  top: -2rem;
+  width: 70%;
+  height: 100%;
+  border-radius: 50px;
+  content: "";
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)) 0 20% / 50vmin 1vmin,
+    linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1));
+  background-repeat: no-repeat;
+  z-index: -1;
+}
+
+.imageghost_two::before {
+  position: absolute;
+  right: 0.5rem;
+  bottom: -2rem;
+  width: 70%;
+  height: 100%;
+  border-radius: 50px;
+  content: "";
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)) 0 20% / 50vmin 1vmin,
+    linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1));
+  background-repeat: no-repeat;
+  z-index: -1;
+}
+
+@media screen and (max-width: 800px) {
+  .imageghost::before,
+  .imageghost_two::before {
+    display: none;
+  }
+
+  .imageghost_two {
+    top: 0;
+  }
+}
+
+.bg-effect {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.bg-effect::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  background: repeating-linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0.15),
+    rgba(0, 0, 0, 0.08) 5%,
+    rgba(255, 255, 255, 0.15) 10%
+  );
+
+  backdrop-filter: blur(20px);
+  width: 100%;
+  height: 100%;
+  mix-blend-mode: soft-light;
+  animation: glassmve 4s linear infinite;
+  transition: background-position 1s ease-out;
+}
+
+.bg-effect::before {
+  position: absolute;
+  top: 5rem;
+  left: 5rem;
+  content: "";
+  background: linear-gradient(purple 10%, white 50%, purple 100%);
+  width: 70%;
+  height: 70%;
+  backdrop-filter: blur(60px);
+  transform: rotate(20deg);
+}
+
+@keyframes glassmove {
+  from {
+    background-position: 0;
+  }
+  to {
+    background-position: 50px;
+  }
 }
 
 @keyframes grow-progress {
