--- a/app/globals.css
+++ b/app/globals.css
@@ -516,9 +516,19 @@ border color: rgba(161, 174, 229, .22) */
 }
 
 .bgtext {
+  --color: cyan;
+  --color2: #7d49ed;
+  --color3: sandybrown;
+  --color-stop: 20%;
   width: 100%;
-  background: linear-gradient(45deg, cyan 40%, #7d49ed 60%, coral 80%) 0 0 /100vmin 100vmin;
+  background: linear-gradient(
+    45deg,
+    var(--color) var(--color-stop),
+    var(--color2) 50%,
+    var(--color3) 80%
+  );
   background-repeat: no-repeat;
+  transform-origin: 50px 0;
   background-clip: text;
   color: transparent;
   animation: slidetext 3s alternate infinite;
@@ -881,6 +891,21 @@ animation: glassmove 1s ease-in-out infinite; */
   height: 100%;
 }
 
+.scrollmarquee {
+  animation: marquee 1s linear forwards;
+  animation-timeline: view();
+  animation-range: entry 25% cover 50%;
+}
+
+@keyframes marquee {
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(100%);
+  }
+}
+
 @keyframes glassmove {
   0%,
   100% {
@@ -904,6 +929,8 @@ animation: glassmove 1s ease-in-out infinite; */
 
 @keyframes slidetext {
   to {
-    background-position: 0 100%;
+    --color-stop: calc(var(--color-stop) + 50%);
+    background-position: 10px;
+    transform-origin: center;
   }
 }
